package com.structural.DecoratorPattern.exercise1;

public interface Sandwich {
    int getCost();

    String getItemName();
}
